Assortment of fixes for JDK 11+ warnings
Signed-off-by: arjantijms <arjan.tijms@gmail.com>